--- a/rails/Mobile_Inventory_System/app/views/home/brands.html.erb
+++ b/rails/Mobile_Inventory_System/app/views/home/brands.html.erb
@@ -17,7 +17,7 @@ th, td {
     </style>
   </head>
    <body bgcolor= "#DEB887">
-  <center><h1>BRAND DETAILS</h1></center><p align="right"><%= link_to "Home", "/" %></p>
+  <center><h1>BRAND DETAILS</h1></center><p align="right"><font size=3><%= link_to "Home", "/" %>  ||  <%= link_to "Add New Brand", "/newbrand" %></font></p>
     <table>
  	  <tr>
 	    <th>BRAND-ID</th>
