--- a/rails/Mobile_Inventory_System/app/views/home/index.html.erb
+++ b/rails/Mobile_Inventory_System/app/views/home/index.html.erb
@@ -9,7 +9,7 @@
     <h1>MOBILE INVENTORY SYSTEM</h1>
     <br>
     <hr>
-      <%= link_to "View all Mobiles", controller: 'home', action: 'mobiles' %>  ||  <%= link_to "View all Brands", controller: 'home', action: 'brands' %>  ||  <%= link_to "View all Buyers", controller: 'home', action: 'buyers' %>  ||  <%= link_to "View all Sellers", controller: 'home', action: 'sellers' %>  ||  <%= link_to "View all Payments", controller: 'home', action: 'payments' %>
+      <%= link_to "View all Mobiles", controller: 'home', action: 'mobiles' %>  ||  <%= link_to "View all Brands", controller: 'home', action: 'brands' %>  ||  <%= link_to "View all Buyers", controller: 'home', action: 'buyers' %>  ||  <%= link_to "View all Sellers", controller: 'home', action: 'sellers' %>  ||  <%= link_to "View all Payments", controller: 'home', action: 'invoices' %>
      <br>
     <hr>
 
