--- a/rails/Mobile_Inventory_System/app/views/home/brands.html.erb
+++ b/rails/Mobile_Inventory_System/app/views/home/brands.html.erb
@@ -17,18 +17,20 @@ th, td {
     </style>
   </head>
    <body bgcolor= "#DEB887">
-  <center><h1>BRAND DETAILS</h1></center><p align="right"><font size=3><%= link_to "Home", "/" %>  ||  <%= link_to "Add New Brand", "/newbrand" %></font></p>
+  <center><h1>BRAND DETAILS</h1></center><p align="right"><font size=3><%= link_to "Home", "/" %>  ||  <%= link_to "Add New Brand", "/brand/new" %></font></p>
     <table>
  	  <tr>
 	    <th>BRAND-ID</th>
 	    <th>BRAND-NAME</th>
 	    <th>HEAD-LOCATION</th><br>
 	  </tr>
-      <% @brands.each do|i| %> 
+      <% @brands.each do|brand| %> 
 	    <tr>
-	  	  <td><%= i.id %></td>
-	      <td><%= i.name %></td>
-	      <td><%= i.head_office %></td><br>
+	  	  <td><%= brand.id %></td>
+	      <td><%= brand.name %></td>
+	      <td><%= brand.head_office %></td>
+        <td><%= link_to "Edit", "/"%> &nbsp; &nbsp; <%= link_to "Delete", "/delete_buyer?id=#{brand.id}", method: 'DELETE' %></td><br>
+
   	    </tr>  	
       <% end %>
     </table>
