--- a/rails/Mobile_Inventory_System/app/views/home/mobiles.html.erb
+++ b/rails/Mobile_Inventory_System/app/views/home/mobiles.html.erb
@@ -17,7 +17,7 @@ th, td {
     </style>
   </head>
    <body bgcolor= "#DEB887">
-  <center><h1>MOBILE DETAILS</h1></center><p align="right"><font size=3><%= link_to "Home", "/" %>   ||  <%= link_to "Add New Mobile", "/newmobile" %></font></p>
+  <center><h1>MOBILE DETAILS</h1></center><p align="right"><font size=3><%= link_to "Home", "/" %>   ||  <%= link_to "Add New Mobile", "/mobile/new" %></font></p>
     <table>
  	  <tr>
 	    <th>MOBILE-ID</th> 
@@ -38,7 +38,8 @@ th, td {
 	      <td><%= i.imei_code %></td>
 	      <td><%= i.inventory%></td>
 	      <td><%= i.brand.name%></td>
-	      <td><%= link_to "Edit", "/" %>  <%= link_to "Delete", "/delete_mobile?id=#{i.id}", method: 'DELETE' %></td>
+	      <td><%= link_to "Edit", "/edit_mobile?id=#{i.id}"%>  <%= link_to "Delete", "/delete_mobile?id=#{i.id}", method: 'DELETE' %></td>
+
 	      <br>
   	    </tr>  	
       <% end %>
