--- a/rails/Mobile_Inventory_System/app/views/home/sellers.html.erb
+++ b/rails/Mobile_Inventory_System/app/views/home/sellers.html.erb
@@ -17,17 +17,17 @@ th, td {
     </style>
   </head>
   <body bgcolor= "#DEB887">
-  <center><h1>SELLER DETAILS</h1></center><p align="right"><font size=3><%= link_to "Home", "/" %>  ||  <%= link_to "Add New Seller", "/newseller" %></font></p>
+  <center><h1>SELLER DETAILS</h1></center><p align="right"><font size=3><%= link_to "Home", "/" %>  ||  <%= link_to "Add New Seller", "/seller/new" %></font></p>
     <table>
  	  <tr>
 	    <th>SELLER-ID</th>
 	    <th>SELLER-NAME</th><br>
 	  </tr>
-      <% @sellers.each do|i| %> 
+      <% @sellers.each do|seller| %> 
 	    <tr>
-	  	  <td><%= i.id %></td>
-	      <td><%= i.name %></td>
-	      <td><%= link_to "Edit", "/"%> &nbsp; &nbsp; <%= link_to "Delete", "/"%><br>
+	  	  <td><%= seller.id %></td>
+	      <td><%= seller.name %></td>
+	      <td><%= link_to "Edit", "/"%> &nbsp; &nbsp; <%= link_to "Delete", "/delete_seller?id=#{seller.id}", method: 'DELETE' %></td><br>
   	    </tr>  	
       <% end %>
     </table>
