--- a/project/product/app/views/layouts/application.html.erb
+++ b/project/product/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
  -->
 <html>
   <head>
-    <title>Pragprog Books Online Store</title>
+    <title>Online Articles</title>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= csrf_meta_tags %>
@@ -25,10 +25,10 @@
     <div id="columns">
       <div id="side">
         <ul>
-          <li><a href="http://www.google.com">Home</a></li>
-          <li><a href="http://www..../faq">Questions</a></li>
+          <li><a href="http://localhost:3000">Home</a></li>
+          <li><a href="http://www..../faq">Search By Price</a></li>
           <li><a href="http://www..../news">News</a></li>
-          <li><a href="http://www..../contact">Contact</a></li>
+          <li><a href="http://www..../contact">Contact Us</a></li>
         </ul>
       </div>
       <div id="main">
