--- a/project/product/app/views/layouts/application.html.erb
+++ b/project/product/app/views/layouts/application.html.erb
@@ -24,8 +24,11 @@
     </div>
     <div id="columns">
       <div id="side">
+      <div id="cart">
+        <%= render @cart %>
+      </div>
         <ul>
-          <li><a href="http://localhost:3000">Home</a></li>
+          <li><!-- <a href="http://localhost:3000">Home</a> --><%= link_to "Home", root_url%></li>
           <li><a href="http://www..../faq">Search By Price</a></li>
           <li><a href="http://www..../news">News</a></li>
           <li><a href="http://www..../contact">Contact Us</a></li>
