--- a/project/product/app/assets/stylesheets/application.css
+++ b/project/product/app/assets/stylesheets/application.css
@@ -13,8 +13,37 @@
  *= require_tree .
  *= require_self
  */
- body, body > p, body > ol, body > ul, body > td {margin: 8px !important} #banner {position: relative;min-height: 40px;background: #9c9;padding: 10px;border-bottom: 2px solid;font: small-caps 40px/40px "Times New Roman", serif;color: #282;text-align: center;img {position: absolute;top: 0;left: 0;width: 192px;}
-}#notice {
+ body, body > p, body > ol, body > ul, body > td 
+ {
+ 	margin: 8px !important
+ }
+form, div 
+{
+  display: inline;
+}
+input 
+{
+  font-size: small;
+} 
+#cart 
+{
+  font-size: smaller;
+  color:
+  white;
+  table 
+  {
+    border-top:
+    1px dotted #595;
+    border-bottom: 1px dotted #595;
+    margin-bottom: 10px;
+  }
+}
+
+#banner 
+{
+	position: relative;min-height: 40px;background: #9c9;padding: 10px;border-bottom: 2px solid;font: small-caps 40px/40px "Times New Roman", serif;color: #282;text-align: center;img {position: absolute;top: 0;left: 0;width: 192px;}
+}
+#notice {
 color: #000 !important;
 border: 2px solid red;
 padding: 1em;
@@ -60,3 +89,8 @@ flex-direction: column-reverse;
 #banner {
 height: 1em;}#banner .title {display: none;}
 }
+
+
+
+
+
