--- a/project/product/app/assets/stylesheets/carts.scss
+++ b/project/product/app/assets/stylesheets/carts.scss
@@ -1,7 +1,7 @@
 // Place all the styles related to the carts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.carts 
+.carts, #side #cart 
 {
   .item_price, .total_line 
   {
@@ -14,3 +14,4 @@
     border-top: 1px solid #595;
   }
 }
+ 
